--- a/index.html
+++ b/index.html
@@ -255,8 +255,6 @@
                   <div class="outreach-slide active">
                     <div class="slide-layout">
                       <div class="slide-text">
-                        <div class="highlight-stat">
-                        </div>
                         <p>It's always fun bringing astronomy to folks over a few drinks of beer at local breweries.
                           I started volunteering for AoT since 2021 and have been one of the main organizers ever since. I usually 
                         help with things like venue coordination, social media advertisement, speaker recruitment, and event setup on the day of. 
@@ -265,7 +263,7 @@
                       </div>
                       <div class="slide-image">
                         <img src="/assets/images/aot_3.jpg" alt="Astronomy on Tap venue" class="presentation-photo">
-                        <p class="photo-caption">Typical Astronomy on Tap Chicago venue atmosphere</p>
+                        <p class="photo-caption">An AoT event at Five & Dime in Evanston near CIERA </p>
                       </div>
                     </div>
                   </div>
@@ -274,8 +272,6 @@
                   <div class="outreach-slide">
                     <div class="slide-layout">
                       <div class="slide-text">
-                        <div class="highlight-stat">
-                        </div>
                         <p>It's always fun bringing astronomy to folks over a few drinks of beer at local breweries.
                           I started volunteering for AoT since 2021 and have been one of the main organizers ever since. I usually 
                         help with things like venue coordination, social media advertisement, speaker recruitment, and event setup on the day of. 
@@ -284,7 +280,7 @@
                       </div>
                       <div class="slide-image">
                         <img src="/assets/images/AoT_1.jpg" alt="AoT" class="presentation-photo">
-                        <p class="photo-caption">Presenting "FRBs and Their Cosmic Neighborhoods"</p>
+                        <p class="photo-caption">I was a scorer at an AoT event at Begyle Brewery, our usual spot!"</p>
                       </div>
                     </div>
                   </div>
@@ -293,8 +289,6 @@
                   <div class="outreach-slide">
                     <div class="slide-layout">
                       <div class="slide-text">
-                        <div class="highlight-stat">
-                        </div>
                         <p>It's always fun bringing astronomy to folks over a few drinks of beer at local breweries.
                           I started volunteering for AoT since 2021 and have been one of the main organizers ever since. I usually 
                         help with things like venue coordination, social media advertisement, speaker recruitment, and event setup on the day of. 
@@ -302,8 +296,8 @@
                         There's never a dull moment when talking to people about astronomy. I mean, how could you!?</p>
                       </div>
                       <div class="slide-image">
-                        <img src="/assets/images/aot_2.jpg" alt="AoT" class="presentation-photo">
-                        <p class="photo-caption">Engaged audience during Q&A session</p>
+                        <img src="/assets/images/aot_5.jpg" alt="AoT" class="presentation-photo">
+                        <p class="photo-caption">A flyer I made for the Pi day event. People loved pi and pie! </p>
                       </div>
                     </div>
                   </div>
@@ -312,8 +306,6 @@
                   <div class="outreach-slide">
                     <div class="slide-layout">
                       <div class="slide-text">
-                        <div class="highlight-stat">
-                        </div>
                         <p>It's always fun bringing astronomy to folks over a few drinks of beer at local breweries.
                           I started volunteering for AoT since 2021 and have been one of the main organizers ever since. I usually 
                         help with things like venue coordination, social media advertisement, speaker recruitment, and event setup on the day of. 
@@ -331,8 +323,6 @@
                   <div class="outreach-slide">
                     <div class="slide-layout">
                       <div class="slide-text">
-                        <div class="highlight-stat">
-                        </div>
                         <p>It's always fun bringing astronomy to folks over a few drinks of beer at local breweries.
                           I started volunteering for AoT since 2021 and have been one of the main organizers ever since. I usually 
                         help with things like venue coordination, social media advertisement, speaker recruitment, and event setup on the day of. 
@@ -340,8 +330,8 @@
                         There's never a dull moment when talking to people about astronomy. I mean, how could you!?</p>
                       </div>
                       <div class="slide-image">
-                        <img src="/assets/images/aot_5.jpg" alt="AoT community" class="presentation-photo">
-                        <p class="photo-caption">Amazing community of astronomy enthusiasts</p>
+                        <img src="/assets/images/PXL_20240315_002849263.jpg" alt="AoT community" class="presentation-photo">
+                        <p class="photo-caption">Alexa gave an amazing talk about FRBs that day, I was in awe</p>
                       </div>
                     </div>
                   </div>
@@ -350,8 +340,6 @@
                   <div class="outreach-slide">
                     <div class="slide-layout">
                       <div class="slide-text">
-                        <div class="highlight-stat">
-                        </div>
                         <p>It's always fun bringing astronomy to folks over a few drinks of beer at local breweries.
                           I started volunteering for AoT since 2021 and have been one of the main organizers ever since. I usually 
                         help with things like venue coordination, social media advertisement, speaker recruitment, and event setup on the day of. 
@@ -389,7 +377,7 @@
               <div class="presentation-container">
                 <div class="presentation-header">
                   <div class="presentation-icon">
-                    <img src="/assets/images/GWiP.png" alt="GWIP Logo" class="presentation-logo">
+                    <img src="/assets/images/GWIP_trans.png" alt="GWIP Logo" class="presentation-logo">
                   </div>
                   <h3>Graduate Womxn in Physics</h3>
                   <p class="presentation-tagline">Building community and representation in physics and astronomy</p>
