--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                       </div>
                       <div class="slide-image">
                         <img src="/assets/images/AoT_1.jpg" alt="AoT" class="presentation-photo">
-                        <p class="photo-caption">I was a scorer at an AoT event at Begyle Brewery, our usual spot!"</p>
+                        <p class="photo-caption">I was a scorer at an AoT event at Begyle Brewery, our usual spot!</p>
                       </div>
                     </div>
                   </div>
@@ -313,8 +313,8 @@
                         There's never a dull moment when talking to people about astronomy. I mean, how could you!?</p>
                       </div>
                       <div class="slide-image">
-                        <img src="/assets/images/aot_4.jpg" alt="AoT event setup" class="presentation-photo">
-                        <p class="photo-caption">Setting up for another great AoT event</p>
+                        <img src="/assets/images/aot_6.jpg" alt="AoT event setup" class="presentation-photo">
+                        <p class="photo-caption">Another flyer I'm proud of, black holes are always a hit for the spooky season  </p>
                       </div>
                     </div>
                   </div>
@@ -398,7 +398,7 @@
                       </div>
                       <div class="slide-image">
                         <img src="/assets/images/IMG_6695.jpg" alt="GWIP community meeting" class="presentation-photo">
-                        <p class="photo-caption">Graduate Womxn in Physics community meeting</p>
+                        <p class="photo-caption">The Welcome Back Bash at the start of the 2024–2025 academic year, featuring fall-themed trivia!</p>
                       </div>
                     </div>
                   </div>
@@ -417,7 +417,7 @@
                       </div>
                       <div class="slide-image">
                         <img src="/assets/images/IMG_5390.jpg" alt="GWIP community meeting" class="presentation-photo">
-                        <p class="photo-caption">Graduate Womxn in Physics community meeting</p>
+                        <p class="photo-caption">Everyone was so so creative with the mugs they painted at our community building event!!</p>
                       </div>
                     </div>
                   </div>
@@ -436,7 +436,7 @@
                       </div>
                       <div class="slide-image">
                         <img src="/assets/images/IMG_7482.jpg" alt="GWIP mentorship session" class="presentation-photo">
-                        <p class="photo-caption">Mentorship program kickoff event</p>
+                        <p class="photo-caption">Cocoa and conversations with festive gifts for the holidays</p>
                       </div>
                     </div>
                   </div>
@@ -457,7 +457,7 @@
                       </div>
                       <div class="slide-image">
                         <img src="/assets/images/IMG_4516.jpg" alt="GWIP networking event" class="presentation-photo">
-                        <p class="photo-caption">Networking and professional development event</p>
+                        <p class="photo-caption">Some of us painting our mugs, I still use mine regularly!</p>
                       </div>
                     </div>
                   </div>
