--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                           We use the term "womxn" to broadly include cisgender women, transgender people, non-binary individuals, and other gender-diverse members of our community.</p>
                         <p>Our organization is built around three main pillars: community and advocacy, mentorship, and professional development, 
                           all aimed at empowering members to thrive academically, personally, and professionally in physics. The slideshow highlights some of the 
-                        events we have hosted throughtout the academic years. Some of my favorites are the bowl painting event, coffee series which I co-established,
+                        events we have hosted. Some of my favorites are the bowl painting event, coffee series which I co-established,
                       and the cocoa and conversation events.</p>
                       </div>
                       <div class="slide-image">
@@ -412,7 +412,7 @@
                           We use the term "womxn" to broadly include cisgender women, transgender people, non-binary individuals, and other gender-diverse members of our community.</p>
                         <p>Our organization is built around three main pillars: community and advocacy, mentorship, and professional development, 
                           all aimed at empowering members to thrive academically, personally, and professionally in physics. The slideshow highlights some of the 
-                        events we have hosted throughtout the academic years. Some of my favorites are the bowl painting event, coffee series which I co-established,
+                        events we have hosted. Some of my favorites are the bowl painting event, coffee series which I co-established,
                       and the cocoa and conversation events.</p>
                       </div>
                       <div class="slide-image">
@@ -431,7 +431,7 @@
                           We use the term "womxn" to broadly include cisgender women, transgender people, non-binary individuals, and other gender-diverse members of our community.</p>
                         <p>Our organization is built around three main pillars: community and advocacy, mentorship, and professional development, 
                           all aimed at empowering members to thrive academically, personally, and professionally in physics. The slideshow highlights some of the 
-                        events we have hosted throughtout the academic years. Some of my favorites are the bowl painting event, coffee series which I co-established,
+                        events we have hosted. Some of my favorites are the bowl painting event, coffee series which I co-established,
                       and the cocoa and conversation events.</p>
                       </div>
                       <div class="slide-image">
@@ -452,7 +452,7 @@
                           </p>
                           Our organization is built around three main pillars: community and advocacy, mentorship, and professional development, 
                           all aimed at empowering members to thrive academically, personally, and professionally in physics. The slideshow highlights some of the 
-                        events we have hosted throughtout the academic years. Some of my favorites are the bowl painting event, coffee series which I co-established,
+                        events we have hosted. Some of my favorites are the bowl painting event, coffee series which I co-established,
                       and the cocoa and conversation events. </p>
                       </div>
                       <div class="slide-image">
