--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                       </div>
                       <div class="slide-image">
                         <img src="/assets/images/IMG_6695.jpg" alt="GWIP community meeting" class="presentation-photo">
-                        <p class="photo-caption">The Welcome Back Bash at the start of the 2024–2025 academic year, featuring fall-themed trivia!</p>
+                        <p class="photo-caption">The Welcome Back Bash at the start of the 2024–2025 academic year, featuring fall-themed trivia</p>
                       </div>
                     </div>
                   </div>
@@ -457,7 +457,7 @@
                       </div>
                       <div class="slide-image">
                         <img src="/assets/images/IMG_4516.jpg" alt="GWIP networking event" class="presentation-photo">
-                        <p class="photo-caption">Some of us painting our mugs, I still use mine regularly!</p>
+                        <p class="photo-caption">Some of us painting our mugs, I still use mine regularly :D </p>
                       </div>
                     </div>
                   </div>
