--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
                         There's never a dull moment when talking to people about astronomy. I mean, how could you!?</p>
                       </div>
                       <div class="slide-image">
-                        <img src="/assets/images/aot_6.jpg" alt="AoT trivia" class="presentation-photo">
-                        <p class="photo-caption">Trivia night brings out the best astronomy knowledge</p>
+                        <img src="/assets/images/IMG_1204.jpeg" alt="AoT trivia" class="presentation-photo">
+                        <p class="photo-caption">What a typical AoT event looks like </p>
                       </div>
                     </div>
                   </div>
@@ -447,13 +447,11 @@
                       <div class="slide-text">
                         <p>I was thrilled to co-found GWIP with my friend, now a Gates Cambridge Scholar. As the current president, 
                           I'm dedicated to fostering a supportive and inclusive community for womxn in physics at Northwestern. 
-                          We use the term "womxn" to broadly include cisgender women, transgender people, non-binary individuals, and other gender-diverse members of our community. <p>
-
-                          </p>
-                          Our organization is built around three main pillars: community and advocacy, mentorship, and professional development, 
+                          We use the term "womxn" to broadly include cisgender women, transgender people, non-binary individuals, and other gender-diverse members of our community.</p>
+                        <p>Our organization is built around three main pillars: community and advocacy, mentorship, and professional development, 
                           all aimed at empowering members to thrive academically, personally, and professionally in physics. The slideshow highlights some of the 
                         events we have hosted. Some of my favorites are the bowl painting event, coffee series which I co-established,
-                      and the cocoa and conversation events. </p>
+                      and the cocoa and conversation events.</p>
                       </div>
                       <div class="slide-image">
                         <img src="/assets/images/IMG_4516.jpg" alt="GWIP networking event" class="presentation-photo">
