--- a/index.html
+++ b/index.html
@@ -245,7 +245,9 @@
               <!-- Astronomy on Tap Slide Deck -->
               <div class="presentation-container">
                 <div class="presentation-header">
-                  <img src="/assets/images/coaster_front.png" alt="AoT Logo" class="presentation-logo">
+                  <div class="presentation-icon">
+                    <img src="/assets/images/coaster_front.png" alt="AoT Logo" class="presentation-logo">
+                  </div>
                   <h3>Astronomy on Tap Chicago</h3>
                   <p class="presentation-tagline">Making astronomy accessible in casual, fun environments</p>
                 </div>
