--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 
                 <p> Before coming to Northwestern, I earned my bachelor’s degree in Physics with minors in Mathematics and Astronomy from Purdue University. <p>    
                   
-                <p>When I'm not in the office, I enjoy running, hiking, visiting national parks, and reading.</p>
+                <p>When I'm not in the office, I enjoy running, hiking, exploring new coffe shops, and reading.</p>
             </div>
         </div>
         </section>
